--- a/mandelbulber2/formula/ui/transf_add_cpixel_sphere_fold.ui
+++ b/mandelbulber2/formula/ui/transf_add_cpixel_sphere_fold.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>transf_add_cpixel_sphere_fold</class>
+ <class>Form</class>
  <widget class="QWidget" name="Form">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>853</width>
-    <height>1373</height>
+    <width>898</width>
+    <height>1573</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -217,7 +217,7 @@
      <item row="0" column="0" rowspan="3">
       <widget class="QLabel" name="label_15">
        <property name="text">
-        <string>spherel 
+        <string>sphere 
 fold
 offset:</string>
        </property>
