--- a/mandelbulber2/formula/ui/transf_add_cpixel_sphere_fold.ui
+++ b/mandelbulber2/formula/ui/transf_add_cpixel_sphere_fold.ui
@@ -219,7 +219,7 @@
        <property name="text">
         <string>sphere 
 fold
-offset:</string>
+offset</string>
        </property>
       </widget>
      </item>
